# MotorControlUnit

./: .gitignore  CMakeLists.txt  CMakePresets.json
MountControlUnit/AxisController/: CMakeLists.txt  axis_controller.h  axle_controller.c  cJSON.c  common_utils.c  common_utils.h  json_utils.c  json_utils.h  logz.c  logz.h  socket_utils.c  socket_utils.h  sockets.h  thread_utils.h  vlitem_handler.c  vlitem_handler.h
MountControlUnit/MountController/: AxisHandler.cpp  Test.cpp
